--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mockup</title>
     <link rel="stylesheet" href="./index.css">
+    <meta name="google-site-verification" content="74CzQa9RNDcnRJdIUCx_Ee5w-kvVugqOfK8fw5l1ny0" />
 </head>
+
 <body>
     <div class="main">
         <div class="left">
             <img src="./assets/lemons.jpg" alt="">
             <div class="left-text">
-                <h2>Lorem ipsum dolo</h2>
-                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, nostrum?</h4>
+                <h2>Lemon Quote</h2>
+                <h4>"When life gives you lemons, you squeeze them back into life's eyes!!!"</h4>
+                <h4>-The Amazing World of Gumball</h4>
                 <div class="group-dot">
                     <div class="long-dot"></div>
                     <div class="dot"></div>
@@ -46,4 +50,5 @@
         </div>
     </div>
 </body>
+
 </html>
